CHANGES IN FLTK 1.1.8

	- Fl_Pack incorrectly started widgets at an offset of 1/2
	  the spacing value.
	- FLUID did not generate correct window class code if
	  the class name was not a standard FLTK window class.
	- FLUID incorrectly included <FL/Fl_classname.H> for
	  widget classes that were not subclassed from a standard
	  FLTK widget class.
	- The demo master test program now supports scheme
	  selection and all demos use it (STR #1459)
	- fl_arc() and fl_pie() did not draw properly on WIN32
	  when the start and end points were identical (STR
	  #1461)
	- Fl_Input and Fl_Text_Editor now hide the mouse pointer
	  when typing into them (STR #1466)
	- Implemented alpha blending for Quartz, WIN32, and X11
	- Check buttons did not redraw properly with box() set to
	  FL_NO_BOX (STR #1440)
	- Added the Bluecurve-inspired scheme "gtk+".
	- Updated documentation (STR #1420, STR #1421)
	- Fixed font caching issue (STR #1415)
	- Fixed crash in fl_file_chooser (STR #1410)
	- Fixed Fluid hotspot bug (STR #1416)
	- Fixed image copy code (STR #1412)
	- Fixed latin-to-roman text conversion (STR #1411)
	- Fixed Cygwin timeout for "select" calls (STR #1151)
	- Improved Mac OS X subwindow handling (STR #1402)
	- Fixed more inconsistencies between fl_draw and
	  fl_measure (STR #1408)
	- Fixed fl_measure which mistook a trailing '@@' for a
	  symbol (STR #1406)
	- Fixed GLUT behavior on window creation (STR #1403)
	- Fixed OS X bug that would hide tooltips before they
	  were shown (STR #1392)
	- Fixed Fl_Tabs tooltip reappearing (STR #1324)
	- Added a new demo game called "Block Attack!"
	- Updated the Sudoku game to show a notice about Hard and
	  Impossible puzzles having multiple solutions which are
	  not a bug or error (STR #1361)
	- Fixed filechooser to behave as documented when file
	  pattern changes (STR #1359)
	- Completed the global function index and added an
	  alphabetical list of all methods (STR #1319)
	- Avoiding problems with some platforms that don't 